<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_calle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_calle"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/editText_piso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_numeroCasa"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/editText_localidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_localidad"
            android:inputType="textCapSentences" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_comenzar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/abc_action_bar_content_inset_material"
            android:background="@drawable/button_selector"
            android:text="@string/button_Buscar"
            android:textColor="@color/buttonTextColor" />
    </LinearLayout>
</LinearLayout>