<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:clickable="true"
    >

    <LinearLayout
        android:id="@+id/ly_contenedorMapa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nombreConductor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_conductor"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_telefonoConductor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_telefonoConductor" />

            <TextView
                android:id="@+id/tv_emailConductor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_emailConductor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="0.5"
            android:orientation="vertical">
               />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_new"
                    android:textColor="#FFFFFF"
                    android:id="@+id/button_agregar"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_agregar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_call"
                    android:textColor="#FFFFFF"
                    android:id="@+id/button_llamar"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_llamar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_new_email"
                    android:textColor="#FFFFFF"
                    android:id="@+id/button_email" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_correo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_action_place"
                    android:id="@+id/button_ubicacion"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_ubicacion"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>