<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.geotruck.MainActivity" >

    <LinearLayout
        android:id="@+id/ly_componentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ly_GeoTruck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:layout_margin="@dimen/abc_action_bar_content_inset_material">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="25sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editText_usuario"
                android:typeface="monospace"
                android:inputType="textCapSentences"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editText_password"
                android:inputType="textPassword" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="bottom"
        android:orientation="vertical" >



        <LinearLayout
            android:id="@+id/ly_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >
            <Button
                android:id="@+id/b_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:textColor="@color/buttonTextColor"
                android:gravity="center"
                android:text="@string/button_entrar" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_mantenerSesion"
                android:id="@+id/check_mantener_sesion"
                android:layout_margin="@dimen/activity_vertical_margin"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_mostrarPassword"
                android:id="@+id/check_mostrar_password"
                android:layout_margin="@dimen/activity_vertical_margin"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>